force-app/main/default/objects/Account/fields/Access_Application_Reason__c.field-meta.xml
<CustomField>
    <fullName>Access_Application_Reason__c</fullName>
    <label>Access Application Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bypass All Criteria</fullName>
            </value>
            <value>
                <fullName>Access Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>