force-app/main/default/objects/Account/fields/propper_message__c.field-meta.xml
<CustomField>
    <fullName>propper_message__c</fullName>
    <label>propper message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>