force-app/main/default/objects/Account/fields/propper_message_date__c.field-meta.xml
<CustomField>
    <fullName>propper_message_date__c</fullName>
    <label>propper message date</label>
    <type>Date</type>
</CustomField>