force-app/main/default/objects/Account/listViews/Test.listView-meta.xml
<ListView>
    <fullName>Test</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Test</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>